demo-scg/blue-green/demo-scg-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-scg-blue-svc
  namespace: gateway
  labels:
    app: demo-scg
spec:
  ports:
    - name: blue
      port: 8080
      targetPort: http
  selector:
    app: demo-scg
