demo-scg/blue-green/demo-scg-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-scg-green-svc
  namespace: gateway
  labels:
    app: demo-scg
spec:
  ports:
    - name: rest
      port: 8080
      targetPort: http
  selector:
    app: demo-scg
