demo-scg/blue-green/demo-scg-green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-scg-green-ingress
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dev.demo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-scg-green-svc
            port:
              number: 8080
